--- a/src/style.css
+++ b/src/style.css
@@ -121,7 +121,7 @@ button[type="submit"] {
   margin-left: 5px;
 }
 
-.user-icon {
+.user-Icon {
   width: 50px;
   height: 50px;
   border-radius: 50%;
